<resources>
    <!-- etiquetas en registro-->
    <string name="terminoCondiciones">Leer Términos y Condiciones</string>
    <string name="app_name">SaborCriollo_Proyecto</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="IniSesion">Iniciar Sesion con tu usuario</string>
<<<<<<< HEAD

    <string name="txt_usuario1">Coloque usuario</string>
    <string name="correo">Correo:</string>
    <string name="txt_correo">Coloque correo</string>
    <string name="contraseña">Contraseña:</string>
    <string name="coloque_contrasena1">Coloque contraseña</string>
    <string name="ingreso">Ingresar</string>
    <string name="registro">Registrarse</string>

    <string name="txt_usuario2">Ingrese usuario</string>
    <string name="txt_correos2">Ingrese correo</string>
    <string name="txt_contrasena2">Ingrese contraseña</string>
    <string name="txt_correo1">Ingrese correo</string>
    <string name="ingrese_contrasena">Ingrese contraseña</string>
    <string name="coloque_contrasena">Coloque Contraseña</string>
    <string name="txt_nombre">Ingrese nombre del cliente</string>
    <string name="txt_restaurante">Seleccione restaurante</string>
    <string name="txt_fecha">Seleccione fecha</string>
    <string name="txt_hora">Seleccione hora</string>
    <string name="txt_personas">Seleccione cantidad de personas</string>
    <string name="txt_cliente">Ingrese nombre del cliente</string>
    <string name="txt_subtotal">Ingrese sub-total</string>
    <string name="txt_igv">Ingrese IGV</string>
    <string name="txt_totalventa">Ingrese total de venta</string>
    <string name="txt_metodopago">Seleccione método de pago</string>


    <!--     Titulos -->

    <string name="nombre_usuario">Nombre Usuario</string>


    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="Correo2">Correo:</string>
    <string name="btn_retornar">retornar</string>


    <!--     etiquetas reserva  -->

    <string name="ReservaTitulo">Reservas</string>

    <string name="Detallesdetureserva">Detalles de tu reserva</string>
    <string name="Codigo">Codigo:</string>
    <string name="Nombre">Nombre:</string>
    <string name="Restaurante">Restaurante:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora:</string>
    <string name="Personas">Personas:</string>

    <string name="CompartirReserva">Compartir Reserva</string>
    <string name="EditarReserva">Editar Reserva</string>
    <string name="CancerlarReserva">Cancelar Reserva</string>
    <string name="imagenreserva">ImagenReserva</string>
    <string name="btn_reserva">btn_reserva</string>

    <string name="lbl_Codigo">Codigo Reserva</string>
    <string name="lbl_Nombre">Nombre Cliente</string>
    <string name="lbl_Restaurante">Restaurante</string>
    <string name="txt_Fecha">Fecha Reserva</string>
    <string name="txt_Hora">Hora Reserva</string>
    <string name="lbl_Cantidad">Cantidad Personas</string>



    <!--     etiquetas Pedido  -->

    <string name="Promociones">Promociones</string>
    <string name="Confirmar">Confirmar</string>
    <string name="btn_AgregarAlCarrito">Agregar Al Carrito</string>
    <string name="btn_DetallePedido">Ir al Detalle del Pedido</string>
    <string name="pollo_a_la_brasa_entero_con_papas_y_ensalada_precio_s_49_90">Pollo a la brasa entero con papas y ensalada Precio: S/.49.90</string>
    <string name="btn_ListarReserva">Listar Reserva</string>


    <!--     etiquetas Pago  -->
    <string name="DatosDelPago">Datos del pago</string>
    <string name="DetallesDeTuPago">Detalles de tu pago</string>
    <string name="Cliente">Cliente:</string>
    <string name="Sub_total">Sub-Total</string>
    <string name="IGV">I.G.V:</string>
    <string name="TotalVentas">Total de ventas</string>
    <string name="MetodoDePago">Método de pago</string>
    <string name="btn_ConfimarPago">Confirmar Pago</string>
    <string name="btn_AnularPago">Anular Pago</string>
    <string name="men_criollo_l_v_precio_s_12_90">Menú criollo (L-V) Precio: S/.12.90</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
=======
    <string name="txt_usuario1">Coloque usuario</string>
    <string name="correo">Correo:</string>
    <string name="txt_correo">Coloque correo</string>
    <string name="contraseña">Contraseña:</string>
    <string name="coloque_contrasena1">Coloque contraseña</string>
    <string name="ingreso">Ingresar</string>
    <string name="registro">Registrarse</string>
    <string name="txt_usuario2">Ingrese usuario</string>
    <string name="txt_correos2">Ingrese correo</string>
    <string name="txt_contrasena2">Ingrese contraseña</string>
    <string name="txt_correo1">Ingrese correo</string>
    <string name="ingrese_contrasena">Ingrese contraseña</string>
    <string name="coloque_contrasena">Coloque Contraseña</string>
    <string name="txt_nombre">Ingrese nombre del cliente</string>
    <string name="txt_restaurante">Seleccione restaurante</string>
    <string name="txt_fecha">Seleccione fecha</string>
    <string name="txt_hora">Seleccione hora</string>
    <string name="txt_personas">Seleccione cantidad de personas</string>
    <string name="txt_cliente">Ingrese nombre del cliente</string>
    <string name="txt_subtotal">Ingrese sub-total</string>
    <string name="txt_igv">Ingrese IGV</string>
    <string name="txt_totalventa">Ingrese total de venta</string>
    <string name="txt_metodopago">Seleccione método de pago</string>

    <!--     Titulos -->
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="Correo2">Correo:</string>
    <string name="btn_retornar">retornar</string>

    <!--     etiquetas reserva  -->
    <string name="ReservaTitulo">Reservas</string>
    <string name="Detallesdetureserva">Detalles de tu reserva</string>
    <string name="Codigo">Codigo:</string>
    <string name="Nombre">Nombre:</string>
    <string name="Restaurante">Restaurante:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora:</string>
    <string name="Personas">Personas:</string>
    <string name="CompartirReserva">Compartir Reserva</string>
    <string name="EditarReserva">Editar Reserva</string>
    <string name="CancerlarReserva">Cancelar Reserva</string>
    <string name="imagenreserva">ImagenReserva</string>
    <string name="btn_reserva">btn_reserva</string>

    <!--     etiquetas Pedido  -->
    <string name="Promociones">Promociones</string>
    <string name="Confirmar">Confirmar</string>
    <string name="btn_AgregarAlCarrito">Agregar al Carrito</string>
    <string name="btn_FinalizarCompra">Finalizar Compra</string>
    <string name="pollo_a_la_brasa_entero_con_papas_y_ensalada_precio_s_49_90">Pollo a la brasa entero con papas y ensalada Precio: S/.49.90</string>
    <string name="Generar_Reserva">Generar Reserva</string>

    <!--     etiquetas DetallePedido  -->
    <string name="Pedido">Pedido</string>
    <string name="btn_ActualizarPedido">Actualizar Pedido</string>
    <string name="btn_EliminarPedido">Eliminar Pedido</string>
    <string name="btn_Pagar">Pagar</string>

    <!--     etiquetas Pago  -->
    <string name="DatosDelPago">Datos del pago</string>
    <string name="DetallesDeTuPago">Detalles de tu pago</string>
    <string name="Cliente">Cliente:</string>
    <string name="Sub_total">Sub-Total</string>
    <string name="IGV">I.G.V:</string>
    <string name="TotalVentas">Total de ventas</string>
    <string name="MetodoDePago">Método de pago</string>
    <string name="btn_ConfimarPago">Confirmar Pago</string>
    <string name="btn_AnularPago">Anular Pago</string>
    <string name="men_criollo_l_v_precio_s_12_90">Menú criollo (L-V) Precio: S/.12.90</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>




>>>>>>> ae7ba4c3672e33c6dab36cfa8eacc5230bd144ef
