<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PedidoFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_retorno_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/img_plato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/img_cubiertos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_retorno_1"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/txtview_titulopedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="200dp"
        android:text="@string/Promociones"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_plato" />

    <ImageView
        android:id="@+id/img_pollobrasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/img_pollobrasa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_titulopedido"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/txt_pollobrasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/pollo_a_la_brasa_entero_con_papas_y_ensalada_precio_s_49_90"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_pollobrasa"
        app:layout_constraintTop_toBottomOf="@+id/txtview_titulopedido" />

    <Button
        android:id="@+id/btn_carrito1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:text="@string/btn_AgregarAlCarrito"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_comidacriolla"
        app:layout_constraintVertical_bias="0.51" />

    <ImageView
        android:id="@+id/img_comidacriolla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="TODO"
        android:src="@drawable/img_comidacriolla"
        app:layout_constraintEnd_toStartOf="@+id/txt_comidacriolla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_pollobrasa" />

    <TextView
        android:id="@+id/txt_comidacriolla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/men_criollo_l_v_precio_s_12_90"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_comidacriolla"
        app:layout_constraintTop_toBottomOf="@+id/txt_pollobrasa" />

    <Button
        android:id="@+id/btn_carrito2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:text="@string/Eliminar_Pedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/btn_carrito1"
        app:layout_constraintTop_toBottomOf="@+id/txt_comidacriolla" />

    <Button
        android:id="@+id/btn_comprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:text="@string/btn_DetallePedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
=======
        android:layout_marginTop="24dp"
=======
        android:layout_marginStart="57dp"
        android:layout_marginTop="32dp"
>>>>>>> 466801f5ff407775f30d686f5ac329c01dcff912
        android:clickable="true"
        android:padding="9dp"
        android:text="@string/btn_FinalizarCompra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_compra"
        app:layout_constraintTop_toBottomOf="@+id/btn_carrito2" />

    <CheckBox
        android:id="@+id/checkBox_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD

        android:text="@string/btn_ListarReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/btn_retorno_1"
        tools:layout_editor_absoluteY="32dp" />

=======
>>>>>>> 466801f5ff407775f30d686f5ac329c01dcff912
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="68dp"
        android:text="@string/Confirmar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_comprar"
<<<<<<< HEAD
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_comidacriolla" />

=======
        app:layout_constraintStart_toStartOf="parent" />
>>>>>>> 466801f5ff407775f30d686f5ac329c01dcff912

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:paddingLeft="22dp"
        android:text="@string/Generar_Reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>